# nifty-covid-sim

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  imgui.ini
src/: app.cpp  app.h  constants.h  main.cpp  menuwindow.h  person.cpp  person.h  randp.cpp  randp.h  simwindow.h  state.cpp  state.h
